--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -16,7 +16,7 @@ const pageDescription = SITE_DESCRIPTION;
         <div class="prose prose-lg mx-auto text-gray-600 dark:text-gray-300 leading-relaxed">
           <p class="text-pretty prevent-widows" style="text-wrap: pretty;">At Luna Station Press, our mission is to bring you a unique selection of speculative fiction, creative non-fiction, and poetry, with a special focus on women writers. We also publish a short fiction magazine, Luna Station Quarterly, that forms the original foundation&nbsp;for&nbsp;the&nbsp;press.</p>
           <p class="text-pretty prevent-widows" style="text-wrap: pretty;">We have a particular fondness for physical media and independent bookshops. Though we do make eBooks for those who really want them, and distribute our books through all of the large corporate channels (if you must), we sincerely hope you'll join us on the page, and in supporting your local bookseller whenever&nbsp;possible.</p>
-          <p class="text-pretty prevent-widows" style="text-wrap: pretty;">Thank you for visiting. Have fun exploring the Station. Be seeing&nbsp;you.</p>
+          <p class="text-pretty prevent-widows" style="text-wrap: pretty;">Thank you for visiting. Have fun exploring the Station. Be seeing you.</p>
         </div>
       </div>
     </div>
