--- a/src/layouts/Book.astro
+++ b/src/layouts/Book.astro
@@ -10,7 +10,7 @@ import { SITE_TITLE, SITE_DESCRIPTION } from "@/consts";
 
 type Props = CollectionEntry<"books">["data"];
 
-const { title, pubDate, gumroad, weightless, kindle, kobo, coverImage, heroImage, author, paperback, payhip, itch, isbn13, pageCount, genre, smashwords } = Astro.props;
+const { title, pubDate, gumroad, weightless, kindle, kobo, nook, barnes, direct, luluHC, coverImage, heroImage, author, paperback, payhip, itch, isbn13, pageCount, genre, smashwords } = Astro.props;
 
 // Get related books by the same author
 const allBooks = await getCollection("books");
@@ -55,71 +55,109 @@ if (author) {
 
     <!-- Book Details -->
     <div class="w-full lg:w-2/3 lg:ml-12">
-      <!-- Purchase Links -->
-      <div class="mb-8 text-gray-700 dark:text-gray-300 space-y-3">
-        {
-          paperback && (
-            <div>
-              <span class="font-medium">Available in Print:</span>{" "}
-              <a href={paperback} class="text-nymph hover:text-green underline">
-                Amazon
-              </a>
-            </div>
-          )
-        }
+      <!-- Purchase Links Box -->
+      <div class="bg-gray-50 dark:bg-gray-800 rounded-lg p-6 border border-gray-200 dark:border-gray-700 mb-8">
+        <h3 class="text-lg font-medium text-gray-800 dark:text-gray-100 mb-4">Purchase options</h3>
+        <div class="text-gray-700 dark:text-gray-300 space-y-3">
+          {
+            direct && (
+              <div>
+                <span class="font-medium">Direct from us:</span>{" "}
+                {direct && (
+                  <a href={direct} class="text-nymph hover:text-green underline">
+                    via Paypal
+                  </a>
+                )}
+              </div>
+            )
+          }
 
-        {
-          (kindle || gumroad || payhip || kobo || weightless || itch || smashwords) && (
-            <div>
-              <span class="font-medium">Digital:</span>
-              {kindle && (
-                <a href={kindle} class="text-nymph hover:text-green underline">
-                  Kindle
+          {
+            (paperback || barnes) && (
+              <div>
+                <span class="font-medium">Paperback:</span>{" "}
+                <a href={paperback} class="text-nymph hover:text-green underline">
+                  Amazon
                 </a>
-              )}
-              {kindle && (gumroad || payhip || kobo || weightless || itch || smashwords) && <span>&nbsp;| </span>}
-              {gumroad && (
-                <a href={gumroad} class="text-nymph hover:text-green underline">
-                  Gumroad
-                </a>
-              )}
-              {gumroad && (payhip || kobo || weightless || itch || smashwords) && <span>&nbsp;| </span>}
-              {payhip && (
-                <a href={payhip} class="text-nymph hover:text-green underline">
-                  Payhip
-                </a>
-              )}
-              {payhip && (kobo || weightless || itch || smashwords) && <span>&nbsp;| </span>}
-              {kobo && (
-                <a href={kobo} class="text-nymph hover:text-green underline">
-                  Kobo
-                </a>
-              )}
-              {kobo && (weightless || itch || smashwords) && <span>&nbsp;| </span>}
-              {weightless && (
-                <a href={weightless} class="text-nymph hover:text-green underline">
-                  Weightless
-                </a>
-              )}
-              {weightless && (itch || smashwords) && <span>&nbsp;| </span>}
-              {itch && (
-                <a href={itch} class="text-nymph hover:text-green underline">
-                  itch.io
-                </a>
-              )}
-              {itch && smashwords && <span>&nbsp;| </span>}
-              {smashwords && (
-                <a href={smashwords} class="text-nymph hover:text-green underline">
-                  Smashwords
-                </a>
-              )}
-            </div>
-          )
-        }
+                {paperback && barnes && <span>&nbsp;| </span>}
+                {barnes && (
+                  <a href={barnes} class="text-nymph hover:text-green underline">
+                    Barnes & Noble
+                  </a>
+                )}
+              </div>
+            )
+          }
+
+          {
+            luluHC && (
+              <div>
+                <span class="font-medium">Hardcover:</span>{" "}
+                {luluHC && (
+                  <a href={luluHC} class="text-nymph hover:text-green underline">
+                    Lulu
+                  </a>
+                )}
+              </div>
+            )
+          }
+
+          {
+            (kindle || gumroad || payhip || kobo || weightless || itch || smashwords || nook) && (
+              <div>
+                <span class="font-medium">Digital:</span>
+                {kindle && (
+                  <a href={kindle} class="text-nymph hover:text-green underline">
+                    Kindle
+                  </a>
+                )}
+                {kindle && (gumroad || payhip || kobo || weightless || itch || smashwords) && <span>&nbsp;| </span>}
+                {gumroad && (
+                  <a href={gumroad} class="text-nymph hover:text-green underline">
+                    Gumroad
+                  </a>
+                )}
+                {gumroad && (payhip || kobo || weightless || itch || smashwords) && <span>&nbsp;| </span>}
+                {payhip && (
+                  <a href={payhip} class="text-nymph hover:text-green underline">
+                    Payhip
+                  </a>
+                )}
+                {payhip && (kobo || weightless || itch || smashwords) && <span>&nbsp;| </span>}
+                {kobo && (
+                  <a href={kobo} class="text-nymph hover:text-green underline">
+                    Kobo
+                  </a>
+                )}
+                {kobo && (nook || weightless || itch || smashwords) && <span>&nbsp;| </span>}
+                {nook && (
+                  <a href={nook} class="text-nymph hover:text-green underline">
+                    Nook
+                  </a>
+                )}
+                {nook && (weightless || itch || smashwords) && <span>&nbsp;| </span>}
+                {weightless && (
+                  <a href={weightless} class="text-nymph hover:text-green underline">
+                    Weightless
+                  </a>
+                )}
+                {weightless && (itch || smashwords) && <span>&nbsp;| </span>}
+                {itch && (
+                  <a href={itch} class="text-nymph hover:text-green underline">
+                    itch.io
+                  </a>
+                )}
+                {itch && smashwords && <span>&nbsp;| </span>}
+                {smashwords && (
+                  <a href={smashwords} class="text-nymph hover:text-green underline">
+                    Smashwords
+                  </a>
+                )}
+              </div>
+            )
+          }
+        </div>
       </div>
-
-      <!-- Divider -->
-      <div class="border-t border-gray-200 dark:border-gray-700 mb-8"></div>
 
       <!-- Book Description -->
       <div class="prose prose-lg max-w-none mb-8 text-gray-700 dark:text-gray-300 leading-relaxed">
