--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -28,7 +28,7 @@ const pageDescription = "Learn about Luna Station Press and our mission to publi
     <Header />
 
     <main>
-      <PageHeader title="About Us" subtitle="The Buckaroo Banzai and Pinky Caruthers of independent publishing." backgroundImage="/images/bg_071.jpg" />
+      <PageHeader title="About Us" subtitle="The Buckaroo Banzai and Pinky Caruthers<br>of independent publishing." backgroundImage="/images/bg_071.jpg" />
 
       <!-- About Luna Station Press -->
       <section class="py-16">
@@ -58,11 +58,7 @@ const pageDescription = "Learn about Luna Station Press and our mission to publi
                   
                   <!-- Social Links -->
                   <div class="flex justify-center gap-4 mb-8">
-                    {tara.data.socialLinks?.twitter && (
-                      <a href={tara.data.socialLinks.twitter} class="text-gray-500 dark:text-gray-400 ">
-                        Twitter
-                      </a>
-                    )}
+                    
                     {tara.data.website && (
                       <a href={tara.data.website} class="text-gray-500 dark:text-gray-400 " target="_blank" rel="noopener noreferrer">
                         Website
@@ -99,11 +95,7 @@ const pageDescription = "Learn about Luna Station Press and our mission to publi
                   
                   <!-- Social Links -->
                   <div class="flex justify-center gap-4 mb-8">
-                    {jennifer.data.socialLinks?.twitter && (
-                      <a href={jennifer.data.socialLinks.twitter} class="text-gray-500 dark:text-gray-400 ">
-                        Twitter
-                      </a>
-                    )}
+                    
                     {jennifer.data.website && (
                       <a href={jennifer.data.website} class="text-gray-500 dark:text-gray-400 " target="_blank" rel="noopener noreferrer">
                         Website
@@ -113,9 +105,8 @@ const pageDescription = "Learn about Luna Station Press and our mission to publi
                   
                   <!-- Bio Text -->
                   <div class="text-left text-gray-700 dark:text-gray-300 leading-relaxed space-y-4">
-                    <p>A software engineer by trade, Jennifer Lyn Parsons is a life-long lover of story with a capital S. Her work has been seen in various magazines and she has published three books, with quite a few more in her back pocket. She counts Jim Jarmusch and Laura Ingalls Wilder as two of her biggest influences. Make of that what you will.</p>
+                    <p>Jennifer Lyn Parsons is a writer and software engineer. When not writing code or prose, she is also the publisher and editor-in-chief of Luna Station Quarterly. She finds joy in baseball, tea, comics books, discovering music new and old, and making analog things.</p>
                     
-                    <p>When not writing either code or fiction, she reads books and comics, and sometimes makes things out of wool or paper. She finds joy in making things, be they digital or analog.</p>
                   </div>
                 </div>
               )}
