fixed TS issues

--- a/src/pages/blog/[...page].astro
+++ b/src/pages/blog/[...page].astro
@@ -22,7 +22,7 @@ export interface Props {
   };
 }
 
-export async function getStaticPaths({ paginate }) {
+export async function getStaticPaths({ paginate }: any) {
   const posts = (await getCollection("blog")).sort((a, b) => b.data.pubDate.valueOf() - a.data.pubDate.valueOf());
   
   return paginate(posts, {
